# offline-medical-record-intelligence

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  pyproject.toml  requirements.txt  work_division.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: app.py  create_image.py  inference.py  input_processor.py  main.py  output_formatter.py  requirements.txt  spec.md
backend/models/: model_loader.py
backend/src/: input_processor.py  interference.py  ouput_formatter.py
backend/utils/: helpers.py
frontend/: app.js  index.html  manifest.webmanifest  style.css  sw.js
frontend/components/: uploader.js
frontend/pages/: result.html
scripts/: check_docs.py  check_frontend_pwa.py  check_hackathon_rules.py  check_metadata.py  run_pip_audit_ci.py  run_semgrep_ci.py
specs/001-offline-medical-record-intelligence/: spec.md
tests/: test_app.py
